syntax = "proto3";

package co.topl.grpc.models;

import 'models/verification_key.proto';

message Proof {
  oneof sealed_value {
    ProofUndefined undefined = 1;

    ProofKnowledgeCurve25519 knowledgeCurve25519 = 2;
    ProofKnowledgeEd25519 knowledgeEd25519 = 3;
    ProofKnowledgeVrfEd25519 knowledgeVrfEd25519 = 4;
    ProofKnowledgeKesSum knowledgeKesSum = 5;
    ProofKnowledgeKesProduct knowledgeKesProduct = 6;
    ProofKnowledgeHashLock knowledgeHashLock = 7;

    ProofCompositionalThreshold compositionalThreshold = 8;
    ProofCompositionalAnd compositionalAnd = 9;
    ProofCompositionalOr compositionalOr = 10;
    ProofCompositionalNot compositionalNot = 11;

    ProofContextualHeightLock contextualHeightLock = 12;
    ProofContextualRequiredTransactionIO contextualTransactionIO = 13;
  }
}

message ProofUndefined {}

message ProofKnowledgeCurve25519 {
  bytes value = 1;
}

message ProofKnowledgeEd25519 {
  bytes value = 1;
}

message ProofKnowledgeVrfEd25519 {
  bytes value = 1;
}

message ProofKnowledgeKesSum {
  VerificationKeyEd25519 verificationKey = 1;
  ProofKnowledgeEd25519 signature = 2;
  repeated bytes witness = 3;
}

message ProofKnowledgeKesProduct {
  ProofKnowledgeKesSum superSignature = 1;
  ProofKnowledgeKesSum subSignature = 2;
  bytes subRoot = 3;
}

message ProofKnowledgeHashLock {
  bytes value = 1;
}

message ProofCompositionalThreshold {
  repeated Proof proofs = 1;
}

message ProofCompositionalAnd {
  Proof a = 1;
  Proof b = 2;
}

message ProofCompositionalOr {
  Proof a = 1;
  Proof b = 2;
}

message ProofCompositionalNot {
  Proof a = 1;
}

message ProofContextualHeightLock {}
message ProofContextualRequiredTransactionIO {}
